--- a/docker-compose/docker-compose-neo4j.yaml
+++ b/docker-compose/docker-compose-neo4j.yaml
@@ -4,6 +4,7 @@ services:
   neo4j:
         image: neo4j:latest
         container_name: neo4j
+        restart: always
         ports:
           - "7474:7474"
           - "7687:7687"
